--- a/jeff/example-project/Makefile
+++ b/jeff/example-project/Makefile
@@ -18,7 +18,7 @@ INC := -I include
 $(TARGET): $(OBJECTS)
 	@echo " Linking..."
 #	@echo " $(CC) $^ -o $(TARGET) $(LIB)"; $(CC) $^ -o $(TARGET) $(LIB)
-	@echo " $(CC) $^ -o $(TARGET)"; $(CC) $^ -o $(TARGET) $(LIB) ../common/lib/example.a
+	@echo " $(CC) $^ -o $(TARGET)"; $(CC) $^ -o $(TARGET) $(LIB) ../common/lib/jefflib.a
 
 $(BUILDDIR)/%.o: $(SRCDIR)/%.$(SRCEXT)
 	@mkdir -p $(BUILDDIR)
